# data-structure-management-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/: dataelement_schema.py  dataset_schema.py  datasets_router.py  elements_router.py
app/data/: base_repository.py  dataset_repository.py  element_repository.py  enums.py  models.py
app/infrastructure/: config.py  database.py
app/services/: dataset_service.py  element_service.py
tests/: conftest.py
tests/api/: test_dataset_api.py
tests/services/: test_dataset_service.py
